# toy-btc

./: .gitignore  Cargo.toml  README.md  build.rs  compose.yaml  compose_grpc.yaml  compose_tcp.yaml  k8s_deployment.yaml  miner.Dockerfile  miner_grpc.Dockerfile  node.Dockerfile  node_grpc.Dockerfile
lib/: Cargo.toml
lib/src/: blockchain.rs  crypto.rs  error.rs  lib.rs  merkle_root.rs  network.rs  sha256.rs
lib/src/blockchain/: block.rs  transaction.rs
miner/: Cargo.toml
miner/src/: cli.rs  grpc_miner.rs  main.rs
miner/src/grpc/: miner.rs
node/: Cargo.toml
node/src/: args.rs  blockchain.rs  grpc.rs  grpc_node.rs  handler.rs  main.rs  peers.rs
node/src/grpc/: miner_api.rs  node_api.rs  peers.rs  wallet_api.rs
proto/: miner.proto  node.proto  wallet.proto
wallet/: Cargo.toml
wallet/src/: core.rs  logging.rs  main.rs  tasks.rs  ui.rs
wallet/src/core/: config.rs  grpc.rs  utxo.rs
