[package]
name = "node"
version = "0.1.0"
edition = "2021"
build = "../build.rs"

[[bin]]
name = "node-grpc"
path = "src/grpc_node.rs"

[dependencies]
btclib = { version = "0.1.0", path = "../lib" }
anyhow = "1.0.95"
argh = "0.1.13"
tokio = { version = "1.43.0", features = ["full"] }
uuid = { version = "1.11.0", features = ["v4"] }
chrono = "0.4.39"
dashmap = "6.1.0"
static_init = "1.0.3"
tokio-util = { version ="0.7.13", features = ["rt"] }
prost = "0.13.5"
tonic = "0.12.3"
tonic-reflection = "0.12.3"
tokio-stream = "0.1.17"
strum = { version = "0.27", features = ["derive"] }

[build-dependencies]
tonic-build = "0.12.3"
